@@ -1,3 +1,8 @@
+2015-02-20  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* build-uclibc.sh: Create a temporary defconfig file, edit the
+	temporary file, then create the .config file.
+
 2015-02-19  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* build-uclibc.sh: Remove use of arc_config.
